manifests/manifests/webrtc-sender/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webrtc-sender
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: webrtc-sender
  template:
    metadata:
      labels:
        app: webrtc-sender
    spec:
      containers:
        - name: webrtc-sender
          image: ghcr.io/ueckoken/plarail2022-webrtc-sender:f54c2bd-1668677172 # {"$imagepolicy": "plarail2021:webrtc-sender"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
