manifests/manifests/webrtc-sender/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webrtc-sender
  namespace: plarail2021
spec:
  type: NodePort
  selector:
    app: webrtc-sender
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
